# aws_ros_tests

./: README.md
mp_behaviour_tests/: CMakeLists.txt  README.md  package.xml  setup.py
mp_behaviour_tests/launch/: coverage_effectiveness_test.launch  coverage_test.launch  navigation_test.launch  obstacle_avoidance_test.launch
mp_behaviour_tests/nodes/: coverage_effectiveness_node.py  coverage_effectiveness_progress_node.py  coverage_progress_node.py  coverage_test_node.py  monitor_distance_to_goal_node.py  navigation_test_node.py  obstacle_avoidance_test_node.py  obstacle_generator.py
mp_behaviour_tests/src/mp_behaviour_tests/: coverage_effectivity_test.py  coverage_test.py  monitor_distance_to_goal.py  navigation_test.py  obstacle_avoidance_test.py
mp_behaviour_tests/test/: calculate_distance.test  monitor_distance.test  navigation_test.test  test_calculate_path_distance.py  test_monitor_distance_to_goal.py  test_navigation_test.py
mp_localization_tests/: CMakeLists.txt  README.md  package.xml  setup.py
mp_localization_tests/launch/: localization_kidnapped_test.launch  localization_world_changes_test.launch
mp_localization_tests/nodes/: localization_kidnapped_test_node.py  localization_world_changes_test_node.py
mp_localization_tests/src/mp_localization_tests/: localization_kidnapped_test.py  localization_world_changes_test.py
mp_move_manager/: CMakeLists.txt  package.xml  setup.py
mp_move_manager/launch/: move_straight_line.launch  rotate.launch
mp_move_manager/nodes/: move_straight_line  rotate
mp_move_manager/src/mp_move_manager/: move_manager.py  rotate_manager.py  route_manager.py
mp_move_manager/srv/: PoseGoal.srv
mp_planning_tests/: CMakeLists.txt  README.md  package.xml  setup.py
mp_planning_tests/launch/: goal_tolerance.launch  navigation_ab_test.launch  standstill_drive_A_to_A_test.launch
mp_planning_tests/nodes/: goal_tolerance_test_node.py  navigation_ab_test_node.py  standstill_drive_A_to_A_test_node.py
mp_planning_tests/src/mp_planning_tests/: goal_tolerance_test.py  navigation_ab_test.py  standstill_drive_A_to_A_test.py
mp_slippage_and_motor_saturation_tests/: CMakeLists.txt  README.md  package.xml  setup.py
mp_slippage_and_motor_saturation_tests/launch/: rotation_test.launch  standstill_test.launch  straight_line_test.launch
mp_slippage_and_motor_saturation_tests/nodes/: rotation_test_node.py  standstill_test_node.py  straight_line_test_node.py
mp_slippage_and_motor_saturation_tests/src/mp_slippage_and_motor_saturation_tests/: rotation_test.py  standstill_test.py  straight_line_test.py
mp_slippage_and_motor_saturation_tests/test/: README.md  rotation_test.test  standstill_test.test  test_rotation_test.py  test_standstill_test.py
softserve_simulation_common/: CMakeLists.txt  README.md  package.xml  setup.py
softserve_simulation_common/media/models/softserve_cube_50cm/: model.config  model.sdf
softserve_simulation_common/nodes/: move_base_route_manager.py
test_utils/: CMakeLists.txt  package.xml  setup.py
test_utils/src/test_utils/: goal_generator.py  map_utils.py  utils.py
test_utils/src/test_utils/environment_utils/: aws_env_utils.py  env_utils.py  local_env_utils.py
