<?xml version="1.0"?>
<package format="2">
  <name>mp_localization_tests</name>
  <version>0.0.1</version>
  <description>
  AWS RoboMaker robot package that provides a localization tests for mobile platforms
  </description>
  <license>BSD</license>
  <author email="robotics@softserveinc.com">Softserve Robotics Team</author>
  <maintainer email="robotics@softserveinc.com">Softserve Robotics Team</maintainer>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mp_move_manager</depend>

  <depend>ros_monitoring_msgs</depend>
  <depend>test_utils</depend>
  <depend>aws_robomaker_simulation_ros_pkgs</depend>

  <build_depend>rostest</build_depend>
  <build_depend>roslaunch</build_depend>
  
</package>
